# Affective-Manifold

./: .gitignore  README.md  global_affective_manifold.json  global_affective_manifold.npz  pyproject.toml  requirements.txt
affective_manifold/: __init__.py  builder.py  projector.py
affective_manifold.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: demo.py
scripts/: build_manifold.py
